--- a/src/satwater/glint_correction/glint_corr.ipynb
+++ b/src/satwater/glint_correction/glint_corr.ipynb
@@ -2,18 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "b88cf1b4b8e7693c",
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-03-18T22:33:13.253476500Z",
-     "start_time": "2025-03-18T22:33:13.249057900Z"
-    },
     "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    },
-    "tags": []
+    "tags": [],
+    "ExecuteTime": {
+     "end_time": "2025-03-19T17:44:04.928783600Z",
+     "start_time": "2025-03-19T17:44:04.817714100Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -43,38 +40,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "initial_id",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-03-18T22:59:37.600702300Z",
-     "start_time": "2025-03-18T22:59:00.625923600Z"
-    },
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    },
-    "tags": []
-   },
-   "outputs": [
-    {
-     "ename": "IndexError",
-     "evalue": "boolean index did not match indexed array along axis 0; size of axis is 5490 but size of corresponding boolean axis is 10980",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[4], line 106\u001b[0m\n\u001b[0;32m    103\u001b[0m m_glint \u001b[38;5;241m=\u001b[39m m_glint[\u001b[38;5;241m0\u001b[39m,:,:]\n\u001b[0;32m    104\u001b[0m r_glint \u001b[38;5;241m=\u001b[39m r_glint[\u001b[38;5;241m0\u001b[39m,:,:]\n\u001b[1;32m--> 106\u001b[0m r_corr[m_glint] \u001b[38;5;241m=\u001b[39m \u001b[43marr\u001b[49m\u001b[43m[\u001b[49m\u001b[43mm_glint\u001b[49m\u001b[43m]\u001b[49m \u001b[38;5;241m-\u001b[39m r_glint[m_glint]\n\u001b[0;32m    108\u001b[0m r_corr[(r_corr \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m0.2\u001b[39m) \u001b[38;5;241m&\u001b[39m (r_corr \u001b[38;5;241m<\u001b[39m \u001b[38;5;241m0\u001b[39m)] \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0.0001\u001b[39m\n\u001b[0;32m    110\u001b[0m r_corr_final \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mwhere((np\u001b[38;5;241m.\u001b[39misnan(r_corr)) \u001b[38;5;241m|\u001b[39m (r_corr \u001b[38;5;241m<\u001b[39m \u001b[38;5;241m0\u001b[39m), arr, r_corr)\n",
-      "\u001b[1;31mIndexError\u001b[0m: boolean index did not match indexed array along axis 0; size of axis is 5490 but size of corresponding boolean axis is 10980"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
-    "import os\n",
-    "import rasterio\n",
-    "import numpy as np\n",
-    "import rioxarray as rxr\n",
-    "\n",
     "def paramglint(ang: dict, solar_zn: float, view_zn: float, optical_depth_total: float, nw: float) -> dict:\n",
     "    \n",
     "    \"\"\"\n",
@@ -99,15 +67,50 @@
     "    # Direct Transmittance:\n",
     "    Tdir = (np.exp(-float(optical_depth_total) / np.cos(float(solar_zn) * (np.pi / 180)))) * (np.exp(-float(optical_depth_total) / np.cos(float(view_zn) * (np.pi / 180))))\n",
     "    \n",
-    "    return {'rFresnel': rfresnel, 'Tdir': Tdir}\n",
+    "    return {'rFresnel': rfresnel, 'Tdir': Tdir}"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "be14c65086ce581c"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "initial_id",
+   "metadata": {
+    "collapsed": false,
+    "tags": [],
+    "ExecuteTime": {
+     "end_time": "2025-03-19T20:12:13.765031400Z",
+     "start_time": "2025-03-19T20:10:34.337115900Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing band: B1\n",
+      "Processing band: B2\n",
+      "Processing band: B3\n",
+      "Processing band: B4\n",
+      "Processing band: B5\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import rasterio\n",
+    "import numpy as np\n",
+    "import rioxarray as rxr\n",
     "\n",
-    "   \n",
-    "image_path = r\"G:\\Meu Drive\\PhD\\ADJCORR\\21HVB\"\n",
+    "image_path = r\"Z:\\guser\\tml\\mypapers\\HLS_package_paper\\package_validation\\landsat\\17RNK\\atmcor\"\n",
     "band_path = [i for i in os.listdir(image_path)]\n",
     "\n",
-    "output_path = r\"G:\\Meu Drive\\PhD\\ADJCORR\\out\"\n",
+    "output_path = r\"Z:\\guser\\tml\\mypapers\\HLS_package_paper\\glint_correction\\17RNK_20180809\"\n",
     "\n",
-    "tree = ET.parse(r'G:\\Meu Drive\\PhD\\ADJCORR\\21HVB\\MTD.xml')\n",
+    "tree = ET.parse(r'Z:\\guser\\tml\\mypapers\\HLS_package_paper\\package_validation\\landsat\\17RNK\\atmcor\\MTD.xml')\n",
     "\n",
     "root = tree.getroot()\n",
     "metadata_6sv = xml_to_dict(root)\n",
@@ -117,20 +120,21 @@
     "    w_refIndex = {0: 1.335982329,1: 1.332901801,2: 1.329898916,3: 1.326184102,4: 1.313277663}\n",
     "    swir_ref_band = [\"B11\"]\n",
     "    corr_bands = [\"B02\", \"B2\", \"B03\", \"B3\", \"B04\", \"B8A\", \"B11\"]\n",
+    "    swir_band = next((band for band in band_path if \"B11\" in band), None)\n",
     "    \n",
     "else:\n",
     "    w_refIndex = {0: 1.336521293,1: 1.332967903,2: 1.330137378,3: 1.32620903,4: 1.31328015}\n",
-    "    swir_ref_band = [\"B5\", \"B05\"]\n",
-    "    corr_bands = [\"B02\", \"B2\", \"B03\", \"B3\", \"B04\", \"B5\", \"B05\", \"B6\", \"B06\"]\n",
+    "    swir_ref_band = [\"B6\", \"B06\"]\n",
+    "    corr_bands = [\"B02\", \"B2\", \"B03\", \"B3\", \"B4\", \"B04\", \"B5\", \"B05\", \"B6\", \"B06\"]\n",
+    "    swir_band = next((band for band in band_path if \"B6\" in band or \"B06\" in band), None)\n",
     "    \n",
     "# Glint mask based on SWIR band:\n",
-    "swir_band = next((band for band in band_path if \"B11\" in band or \"B6\" in band or \"B06\" in band), None)\n",
     "red_band = next((band for band in band_path if \"B04\" in band or \"B4\" in band), None)\n",
     "\n",
     "xda_red = rxr.open_rasterio(os.path.join(image_path, red_band))\n",
     "swir_20 = rxr.open_rasterio(os.path.join(image_path, swir_band))\n",
     "arr1020 = swir_20.rio.reproject_match(xda_red).values.astype(float)\n",
-    "gmask = np.where(arr1020 >= 0.03, 1, 0) # default --threshold equal to 0.005.\n",
+    "gmask = np.where(arr1020 >= 0.005, 1, 0) # default --threshold equal to 0.005.\n",
     "\n",
     "# Angle images -> OAA, OZA, SAA, and SZA:\n",
     "ang = {}\n",
@@ -140,11 +144,11 @@
     "    ang[i] = np.where(arr1020 == -9999, np.nan, arr)\n",
     "\n",
     "# Extracts the fresnel reflectance and transmittance for reference band (1020nm):\n",
-    "filtered_dict = list({key: value for key, value in metadata_6sv[\"General_Info\"][\"bandname\"].items() if any(band in value for band in swir_ref_band)}.keys())[0]\n",
+    "filtered_dict_ref = list({key: value for key, value in metadata_6sv[\"General_Info\"][\"bandname\"].items() if any(band in value for band in swir_ref_band)}.keys())[0]\n",
     "\n",
-    "amtcor_input = metadata_6sv[\"InputData\"][\"sixSV_params\"][filtered_dict]\n",
+    "amtcor_input = metadata_6sv[\"InputData\"][\"sixSV_params\"][filtered_dict_ref]\n",
     "\n",
-    "reference = paramglint(ang, metadata_6sv[\"InputData\"][\"geometry\"][filtered_dict]['solar_zn'], metadata_6sv[\"InputData\"][\"sixSV_params\"][filtered_dict]['view_z'], \n",
+    "reference = paramglint(ang, metadata_6sv[\"InputData\"][\"geometry\"][filtered_dict_ref]['solar_zn'], metadata_6sv[\"InputData\"][\"sixSV_params\"][filtered_dict_ref]['view_z'], \n",
     "                       amtcor_input['optical_depth_total'], w_refIndex[4])\n",
     "\n",
     "# Glint correction of each band\n",
@@ -156,34 +160,90 @@
     "band_index = list(filtered_dict.keys())\n",
     "    \n",
     "for i in range(len(band_index)):\n",
-    "\n",
-    "    band_key = band_index[i]\n",
-    "\n",
-    "    target = paramglint(ang, metadata_6sv[\"InputData\"][\"geometry\"][band_key]['solar_zn'], metadata_6sv[\"InputData\"][\"sixSV_params\"][band_key]['view_z'], metadata_6sv[\"InputData\"][\"sixSV_params\"][band_key]['optical_depth_total'], w_refIndex[i])\n",
     "    \n",
+    "    band_key = band_index[i]\n",
+    "    \n",
+    "    print(f\"Processing band: {band_key}\")\n",
+    "    \n",
+    "    if (metadata_6sv[\"General_Info\"][\"satellite\"] == \"MSI_S2\") and (band_key == \"B8\"):\n",
+    "        \n",
+    "        arr1020 = rxr.open_rasterio(os.path.join(image_path, swir_band))\n",
+    "        gmask20 = np.where(arr1020 >= 0.03, 1, 0)\n",
+    "    \n",
+    "        # Angle images -> OAA, OZA, SAA, and SZA:\n",
+    "        ang20 = {}\n",
+    "        for k in metadata_6sv[\"InputData\"][\"geometry\"][\"B0\"].keys():\n",
+    "            angle_value = metadata_6sv[\"InputData\"][\"geometry\"][\"B0\"][k]\n",
+    "            arr = np.full_like(arr1020, angle_value, dtype=float)\n",
+    "            ang20[k] = np.where(arr1020 == -9999, np.nan, arr)\n",
+    "        \n",
+    "        reference_20 = paramglint(ang20, metadata_6sv[\"InputData\"][\"geometry\"][filtered_dict_ref]['solar_zn'], metadata_6sv[\"InputData\"][\"sixSV_params\"][filtered_dict_ref]['view_z'], \n",
+    "                       amtcor_input['optical_depth_total'], w_refIndex[4])\n",
+    "        \n",
+    "        target = paramglint(ang20, metadata_6sv[\"InputData\"][\"geometry\"][band_key]['solar_zn'], metadata_6sv[\"InputData\"][\"sixSV_params\"][band_key]['view_z'], metadata_6sv[\"InputData\"][\"sixSV_params\"][band_key]['optical_depth_total'], w_refIndex[i])\n",
+    "    \n",
+    "    elif (metadata_6sv[\"General_Info\"][\"satellite\"] == \"MSI_S2\") and (band_key == \"B11\"):\n",
+    "        \n",
+    "        array_path = os.path.join(image_path, filtered_dict[band_key])\n",
+    "        \n",
+    "        with rasterio.open(array_path) as src:\n",
+    "            arr = src.read(1).astype(float)\n",
+    "            profile = src.profile\n",
+    "        \n",
+    "        mask_nodata = np.where((arr < 0) | (arr > 1) | (arr == np.nan), 0, 1)\n",
+    "        #arr_integer = (arr * 10000).astype(np.int16)\n",
+    "        arr_integer = np.where(mask_nodata == 0, -9999, arr)\n",
+    "    \n",
+    "        # Save corrected image\n",
+    "        profile.update(\n",
+    "            dtype=arr.dtype.name,\n",
+    "            count=1,\n",
+    "            compress='lzw',\n",
+    "            driver='GTiff',\n",
+    "            nodata=-9999\n",
+    "        )\n",
+    "        \n",
+    "        output_path_save = os.path.join(output_path, f\"glintcorr_{band_names[i]}\")\n",
+    "        \n",
+    "        with rasterio.open(output_path_save, 'w', **profile) as dest_dataset:\n",
+    "            dest_dataset.write(arr_integer, 1)\n",
+    "            \n",
+    "        continue\n",
+    "    \n",
+    "    else:\n",
+    "        \n",
+    "        target = paramglint(ang, metadata_6sv[\"InputData\"][\"geometry\"][band_key]['solar_zn'], metadata_6sv[\"InputData\"][\"sixSV_params\"][band_key]['view_z'], metadata_6sv[\"InputData\"][\"sixSV_params\"][band_key]['optical_depth_total'], w_refIndex[i])\n",
+    "        \n",
     "    array_path = os.path.join(image_path, filtered_dict[band_key])\n",
     "    \n",
     "    with rasterio.open(array_path) as src:\n",
     "        arr = src.read(1).astype(float)\n",
     "        profile = src.profile\n",
-    "\n",
-    "    r_glint = arr1020 * (target['Tdir'] / reference['Tdir']) * (target['rFresnel'] / reference['rFresnel'])\n",
     "    \n",
-    "    m_glint = gmask == 1\n",
+    "    if (metadata_6sv[\"General_Info\"][\"satellite\"] == \"MSI_S2\") and (band_key == \"B8\"):\n",
+    "        \n",
+    "        r_glint = arr1020 * (target['Tdir'] / reference_20['Tdir']) * (target['rFresnel'] / reference_20['rFresnel'])\n",
+    "        m_glint = gmask20 == 1\n",
+    "        r_glint = r_glint.values[0,:,:]\n",
+    "        \n",
+    "    else:\n",
+    "        r_glint = arr1020 * (target['Tdir'] / reference['Tdir']) * (target['rFresnel'] / reference['rFresnel'])\n",
+    "        m_glint = gmask == 1\n",
+    "        r_glint = r_glint[0,:,:]\n",
+    "        \n",
     "    r_corr = np.copy(arr)\n",
     "    \n",
     "    m_glint = m_glint[0,:,:]\n",
-    "    r_glint = r_glint[0,:,:]\n",
     "    \n",
     "    r_corr[m_glint] = arr[m_glint] - r_glint[m_glint]\n",
     "\n",
     "    r_corr[(r_corr > -0.2) & (r_corr < 0)] = 0.0001\n",
-    "    \n",
-    "    r_corr_final = np.where((np.isnan(r_corr)) | (r_corr < 0), arr, r_corr)\n",
+    "    r_corr_final = r_corr\n",
+    "    #r_corr_final = np.where((np.isnan(r_corr)) | (r_corr < 0), arr, r_corr)\n",
     "    \n",
     "    mask_nodata = np.where((r_corr_final < 0) | (r_corr_final > 1) | (r_corr_final == np.nan), 0, 1)\n",
-    "    arr_integer = (r_corr_final * 10000).astype(np.int16)\n",
-    "    arr_integer = np.where(mask_nodata == 0, -9999, arr_integer)\n",
+    "    #arr_integer = (r_corr_final * 10000).astype(np.int16)\n",
+    "    arr_integer = np.where(mask_nodata == 0, -9999, r_corr_final)\n",
     "    \n",
     "    # Save corrected image\n",
     "    profile.update(\n",
