--- a/src/satwater/adjacent_correction/adj_corr_test.ipynb
+++ b/src/satwater/adjacent_correction/adj_corr_test.ipynb
@@ -275,7 +275,7 @@
     "# The first gdf is the water mask, the second is the buffer. We will apply the correction in the buffer, and then clip the water mask to drop pixels in the border.\n",
     "#water_shp_final = get_mask_water(image_path)\n",
     "\n",
-    "polygon_mask_binary = create_inward_buffer(image_path)\n",
+    "#polygon_mask_binary = create_inward_buffer(image_path)\n",
     "\n",
     "# Selecting only those important band for AQUAVis\n",
     "if metadata_6sv[\"General_Info\"][\"satellite\"] == \"MSI_S2\":\n",
@@ -340,16 +340,16 @@
     "    sr_corr = Adjacency_correction(metadata_6sv, band_key, image_rs_no_adjc, rho_env)\n",
     "    \n",
     "    # Only update pixels where mask == 1\n",
-    "    adjc_sr = np.where(polygon_mask_binary == 1, sr_corr, image_rs_no_adjc)\n",
+    "    #adjc_sr = np.where(polygon_mask_binary == 1, sr_corr, image_rs_no_adjc)\n",
     "    \n",
     "    output_tif = os.path.join(output_path, f\"2_corrected_band_{band_names[i]}\")\n",
     "    \n",
     "    # Open a new file to write the adjusted raster\n",
     "    with rasterio.open(output_tif, 'w', driver='GTiff', \n",
-    "                       count=1, dtype=adjc_sr.dtype, \n",
-    "                       width=adjc_sr.shape[1], height=adjc_sr.shape[0],\n",
+    "                       count=1, dtype=sr_corr.dtype, \n",
+    "                       width=sr_corr.shape[1], height=sr_corr.shape[0],\n",
     "                       crs=crs_image, transform=transform, nodata=nodata_value) as dst:\n",
-    "        dst.write(adjc_sr, 1)  # Write the data to the file\n",
+    "        dst.write(sr_corr, 1)  # Write the data to the file\n",
     "        "
    ],
    "metadata": {
